[tool.poetry]
name = "llm-bot"
version = "0.1.0"
description = ""
authors = ["danimal141 <hideaki.ishii1204@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
