[tool.poetry]
name = "llm-bot"
version = "0.1.0"
description = ""
authors = ["danimal141 <hideaki.ishii1204@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
openai = "^0.27.2"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.127"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
